--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
       <!-- QR Code Result -->
       <div id="qrcode"></div>
+      <button id="downloadBtn" style="display:none;">Download QR</button>
     </div>
 
     <!-- QR Code Library (reliable CDN) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-<script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
-
