--- a/index.html
+++ b/index.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>QR Generator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <!-- Small GIF/Image preview (centered) -->
-      <div id="preview" class="preview"></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QR Code Generator</title>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+    input {
+      padding: 8px;
+      width: 250px;
+    }
+    button {
+      padding: 8px 12px;
+      margin: 10px;
+      cursor: pointer;
+    }
+    #qrcode {
+      margin-top: 20px;
+    }
+    #downloadBtn {
+      display: none;
+      padding: 8px 12px;
+      margin-top: 15px;
+      background: green;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h2>QR Code Generator</h2>
+  <input type="text" id="text" placeholder="Enter text or URL">
+  <button onclick="generateQR()">Generate QR</button>
 
-      <h1>QR Generator</h1>
-      <input
-        type="text"
-        id="qrData"
-        placeholder="Enter text, URL, or image/GIF link"
-        aria-label="QR data"
-      />
-      <button id="generateBtn">Generate QR Code</button>
+  <div id="qrcode"></div>
+  <a id="downloadBtn" download="qrcode.png">Download QR</a>
 
-      <!-- QR Code Result -->
-      <div id="qrcode"></div>
-      <button id="downloadBtn" style="display:none;">Download QR</button>
-    </div>
+  <script>
+    function generateQR() {
+      const text = document.getElementById("text").value;
+      const qrContainer = document.getElementById("qrcode");
+      const downloadBtn = document.getElementById("downloadBtn");
 
-    <!-- QR Code Library (reliable CDN) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+      qrContainer.innerHTML = ""; // clear old QR
+
+      if (!text) {
+        alert("Please enter some text or URL");
+        return;
+      }
+
+      // Generate QR as canvas
+      QRCode.toCanvas(text, { width: 200 }, function (err, canvas) {
+        if (err) {
+          console.error(err);
+          return;
+        }
+        qrContainer.appendChild(canvas);
+
+        // Convert canvas to image for download
+        const qrImage = canvas.toDataURL("image/png");
+        downloadBtn.href = qrImage;
+        downloadBtn.style.display = "inline-block";
+      });
+    }
+  </script>
+</body>
 </html>
